fix deploy to SF alignment

--- a/src/modules/land/card/card.css
+++ b/src/modules/land/card/card.css
@@ -38,14 +38,8 @@ a.deploy {
     background-color: var(--color-lightest);
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
-    
-    padding: .4rem 1rem;
-    height: auto;
-    padding: .4rem;
-
-    margin: .4rem;
-
     text-decoration: none;
+    align-items: center;
 }
 a.deploy span {
     line-height: 8vw;
